update style to a very light theme

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <title>{% block title %}Welcome{% endblock %} — igin notes</title>
 <body>
   <header>
