--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -1,7 +1,16 @@
 body {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     font-family: 'Lato', sans-serif;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
 }
 
 a {
@@ -13,17 +22,36 @@ a:hover {
     color: rgb(122, 122, 122);
 }
 
-header, footer, div.page {
-    max-width: 760px;
-    margin: 0 auto;
+header {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    flex: 1;
+    min-height: 80px;
+}
+
+header #background-image {
+    z-index: -1;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-image: url('images/alaska-header.jpg');
+    background-position: center center;
+    background-size: cover;
+}
+
+footer, div.page {
     padding: 20px 30px;
 }
 
 header h1 {
-    color: black;
+    color: white;
     margin: 0;
     font-weight: normal;
-    font-size: 42px;
+    font-size: 4vw;
 }
 
 header nav ul {
@@ -38,8 +66,33 @@ header nav ul li {
     padding: 0;
 }
 
+header .avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: rgba(156,179,193,1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: -50%;
+    border: 5px solid white;
+}
+
 div.page {
     background: transparent;
+    flex: 4;
+}
+
+div.page h1 {
+    font-size: 4vw;
+}
+
+footer {
+    display: flex;
+    background-color: rgba(19,83,131,0.31);
+    color: rgba(19,83,131,0.64);
+    justify-content: center;
+    align-items: center;
 }
 
 
