--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,29 +2,32 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-<title>{% block title %}Welcome{% endblock %} — igin notes</title>
+<title>igin notes</title>
 <body>
   <header>
-    <h1>igin notes</h1>
-    <nav>
-      <ul class="nav navbar-nav">
-        <li{% if this._path == '/' %} class="active"{% endif
-          %}><a href="{{ '/'|url }}">Welcome</a></li>
-        {% for href, title in [
-          ['/blog', 'Blog'],
-          ['/projects', 'Projects'],
-          ['/about', 'About']
-        ] %}
-          <li{% if this.is_child_of(href) %} class="active"{% endif
-            %}><a href="{{ href|url }}">{{ title }}</a></li>
-        {% endfor %}
-      </ul>
-    </nav>
+    <div class="title">
+        <div id="background-image"></div>
+        <div class="avatar">
+            <h1>N</h1>
+        </div>
+
+    </div>
+
   </header>
+  <nav>
+      <ul class="nav navbar-nav">
+          {% for href, title in [
+          ['/projects', 'Projects'],
+        ] %}
+              <li{% if this.is_child_of(href) %} class="active"{% endif
+                      %}><a href="{{ href|url }}">{{ title }}</a></li>
+          {% endfor %}
+      </ul>
+  </nav>
   <div class="page">
     {% block body %}{% endblock %}
   </div>
   <footer>
-    &copy; Copyright 2017 by Nicholas Pleschko.
+      <span>&copy; Copyright 2017 by Nicholas Pleschko.</span>
   </footer>
 </body>
