--- a/templates/period.html
+++ b/templates/period.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% from "macros/blog.html" import render_blog_post %}
+{% from "macros/period.html" import render_period %}
 {% block title %}{{ this.title }}{% endblock %}
 {% block body %}
-  {{ render_blog_post(this) }}
+  {{ render_period(this) }}
 {% endblock %}
