--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,21 @@
 {% extends "layout.html" %}
 {% block title %}My Projects{% endblock %}
 {% block body %}
-    {% set projects = site.query('/projects').all() %}
-    <h1>My Fancy Projects</h1>
+    <div class="section">
+        {% set projects = site.query('/projects').all() %}
+        <h5 class="section-title">Projects</h5>
 
-    <ul>
-        {% for project in projects %}
-            <li>
-                <a href="{{ project|url }}">{{ project.title }}</a> —
-            </li>
-        {% endfor %}
-    </ul>
+        <div class="row">
+            {% for project in projects %}
+                <div class="card six columns">
+                    <h5>{{ project.title }}</h5>
+                    <p>{{ project.description }}</p>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="section">
+        <h5 class="section-title">Me</h5>
+        <p>My name is Nicholas Pleschko and I like to code.</p>
+    </div>
 {% endblock %}
